# bit_algo

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE
include/: .bits.hpp.swp  bits.hpp
test/: CMakeLists.txt  main.cpp
